fix: fix start video logo invisible

--- a/src/components/Video/index.module.scss
+++ b/src/components/Video/index.module.scss
@@ -6,18 +6,20 @@
   filter: drop-shadow(2px 2px 15px rgba(130, 91, 199, 0.5));
 
   :global(.video-react-big-play-button:before) {
-    content: " ";
-  }
-
-  :global(.video-react-big-play-button-center) {
+    content: "";
     background: url("/static/img/start-vidio-photo.webp");
     background-size: 65px 68px;
     background-repeat: no-repeat;
     width: 65px;
     height: 68px;
-    margin-top: 0;
-    margin-left: 0;
+    top: 50%;
+    left: 50%;
     transform: translateX(-52%) translateY(-50%);
+    border-width: 0;
+  }
+
+  :global(.video-react-big-play-button-center) {
+    background-color: #0000;
     border-width: 0;
 
     :global(span) {
